--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Weather</string>
     <string name="textview">TextView</string>
+    <string name="sw">Switch</string>
+    <string name="checkbox">CheckBox</string>
+    <string name="start_work_on_main_thread">Start work on main Thread</string>
+    <string name="show_toast">Show Toast</string>
 </resources>
